[gd_scene load_steps=4 format=2]

[ext_resource path="res://area_bala_2.gd" type="Script" id=1]
[ext_resource path="res://imatges/tancs enemics/bala_tanc4.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.56387
height = 20.5111

[node name="area_bala_4" type="Area2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 128
collision_mask = 17
script = ExtResource( 1 )
vel_bales = 120
tempsvida = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="bala" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true
region_rect = Rect2( 348, 222, 36, 16 )

[node name="tempsvida" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_area_bala_2_area_entered"]
[connection signal="timeout" from="tempsvida" to="." method="_on_tempsvida_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
